First steps Ionic 3

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -6,6 +6,18 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-
+<ion-content>
+  <p class="about-body">
+    Life<span>RPG</span> is a game that fuses your personal agenda with an interactive role playing game, where your life, your daily tasks and your social network become a
+    RPG based game. The successful completation of your tasks will get you Experience (XP), so you can level up and get new stuff
+    within the app. You decide what are your awards are. e.g: You just got home from grocery shopping, and that was one of your tasks?
+    Reward yourself with an ice cream bar! Experience increases your progress bar, and molds your stats graph, based on the categories
+    of your tasks. You can manage your exercise schedule, your shopping trips and more!
+  </p>
+  <div class="social-medias">
+      <ion-icon name="logo-facebook" class="social-medias__icon"></ion-icon>
+      <ion-icon name="logo-instagram" class="social-medias__icon"></ion-icon>
+      <ion-icon name="logo-twitter" class="social-medias__icon"></ion-icon>
+      <ion-icon name="logo-googleplus" class="social-medias__icon"></ion-icon>            
+  </div>
 </ion-content>
